# rust_web_axum

./: Cargo-old.toml  Cargo.toml  build.rs
proto/: helloworld.proto
src/: lib.rs
src/entities/: mod.rs  prelude.rs
src/utils/: crypto.rs
