[package]
name = "rust_web_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers"] }
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
regex = { version = "1.10.2", features = [] }
rust-crypto = "0.2.36"
sea-orm = { version = "0.12.6", features = ["sqlx-mysql", "macros", "runtime-tokio-native-tls"] }
# serde 和 serde_json 是解析json格式的库
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.16.1", features = ["derive"] }

