[package]
name = "axum_weibo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weibo"
path = "src/main.rs"


#[[bin]]
#name = "build1"
#path = "build.rs"

#[[bin]]
#name = "sea_orm"
#path = "src/bin/sea_orm.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 之前的time存在问题
time = ">=0.3.35"
md-5 = "0.10"
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers"] }
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
regex = { version = "1.10.2", features = [] }
# rust-crypto = "0.2.36" 存在问题
sea-orm = { version = "0.12.6", features = ["sqlx-mysql", "macros", "runtime-tokio-native-tls", "debug-print"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full", "macros", "rt-multi-thread"] }
toml = "0.8.8"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
tracing = "0.1.40"
#tracing-subscriber = "0.3.18"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.16.1", features = ["derive"] }
tonic = "0.11.0"
prost = "0.12.3"
tonic-build = "0.11.0"
#kafka = "0.10.0"
nom = "7.1.3"
sentinel-core = "0.1.3"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.11"  # 或者最新版本，具体版本可查 crates.io